# usbflashprog

./: .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Doxyfile  README.md  SECURITY.md  doxygroup.txt
chip/: CMakeLists.txt  basechip.cpp  basechip.hpp  doxygroup.txt
chip/eeprom28c/: CMakeLists.txt  eeprom28c.cpp  eeprom28c.hpp  eeprom28c.rc
chip/eprom/: CMakeLists.txt  eprom.cpp  eprom.hpp  eprom.rc
chip/flash28f/: CMakeLists.txt  flash28f.cpp  flash28f.hpp  flash28f.rc
chip/flash28i/: CMakeLists.txt  flash28i.cpp  flash28i.hpp  flash28i.rc
chip/flash28i16/: CMakeLists.txt  flash28i16.cpp  flash28i16.hpp  flash28i16.rc
chip/flash28sst/: CMakeLists.txt  flash28sst.cpp  flash28sst.hpp  flash28sst.rc
chip/sram/: CMakeLists.txt  sram.cpp  sram.hpp  sram.rc
doc/: README.md  block_diagram.graphml  block_diagram.odg  firmware_diagram.graphml  firmware_diagram.odg  pcb45.htm  specs.odt  willem.htm
docs/: README.md  block_diagram.graphml  chip-support.md  devices_eeprom.graphml  devices_eprom.graphml  devices_sram.graphml  firmware_diagram.graphml  index.md  specs.odt
emuprog/: CMakeLists.txt  main.cpp
emuprog/main/: mainwindow.cpp  mainwindow.hpp  mainwindow.ui
firmware/: BUILD.md  README.md
firmware/usbflashprog/: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  README.md  config.hpp  main.cpp  pico_sdk_import.cmake  usbflashprog.cpp  usbflashprog.hpp
firmware/usbflashprog/circuits/: 74hc165.cpp  74hc165.hpp  74hc595.cpp  74hc595.hpp  dc2dc.cpp  dc2dc.hpp
firmware/usbflashprog/hal/: adc.cpp  adc.hpp  flash.cpp  flash.hpp  gpio.cpp  gpio.hpp  multicore.cpp  multicore.hpp  pwm.cpp  pwm.hpp  serial.cpp  serial.hpp  string.cpp  string.hpp
firmware/usbflashprog/modules/: bus.cpp  bus.hpp  devcmd.hpp  device.cpp  device.hpp  opcodes.cpp  opcodes.hpp  runner.cpp  runner.hpp  vgenerator.cpp  vgenerator.hpp
firmware/usbflashprog/scripts/: build.sh  coverage.sh  doxygen.sh  test.sh
firmware/usbflashprog/test/: CMakeLists.txt  main.cpp
firmware/usbflashprog/test/circuits/: 74hc165_test.cpp  74hc165_test.hpp  74hc595_test.cpp  74hc595_test.hpp  dc2dc_test.cpp  dc2dc_test.hpp
firmware/usbflashprog/test/hal/: adc_test.cpp  adc_test.hpp  flash_test.cpp  flash_test.hpp  gpio_test.cpp  gpio_test.hpp  multicore_test.cpp  multicore_test.hpp  pwm_test.cpp  pwm_test.hpp  serial_test.cpp  serial_test.hpp  string_test.cpp  string_test.hpp
firmware/usbflashprog/test/mock/hardware/: adc.h  clocks.h  flash.h  gpio.h  pwm.h  sync.h
firmware/usbflashprog/test/mock/pico/: multicore.h  mutex.h  stdlib.h
firmware/usbflashprog/test/modules/: opcodes_test.cpp  opcodes_test.hpp  vgenerator_test.cpp  vgenerator_test.hpp
hardware/: README.md  address_bus.kicad_sch  address_bus.sch  control_signals.kicad_sch  control_signals.sch  cpu.kicad_sch  cpu.sch  data_bus.kicad_sch  data_bus.sch  fp-info-cache  fp-lib-table  serial_bus.kicad_sch  serial_bus.sch  sym-lib-table  (+15 more)
prog/willem/: CMakeLists.txt  willem.cpp  willem.hpp  willem.rc
software/usbflashprog/: .gitignore  CMakeLists.txt  Doxyfile  Info.plist  README.md  config.hpp  main.cpp  main.hpp
software/usbflashprog/backend/: opcodes.cpp  opcodes.hpp  runner.cpp  runner.hpp  serial.cpp  serial.hpp
software/usbflashprog/backend/devices/: device.cpp  device.hpp
software/usbflashprog/backend/devices/parallel/: dummy.cpp  dummy.hpp  eeprom.cpp  eeprom.hpp  eprom.cpp  eprom.hpp  flash28f.cpp  flash28f.hpp  m27xxx.cpp  m27xxx.hpp  pdevice.cpp  pdevice.hpp  sram.cpp  sram.hpp
software/usbflashprog/backend/epromfile/: qatmelfile.cpp  qatmelfile.hpp  qbinfile.cpp  qbinfile.hpp  qepromfile.cpp  qepromfile.hpp  qepromfilebase.cpp  qepromfilebase.hpp  qhexfile.cpp  qhexfile.hpp  qsrecfile.cpp  qsrecfile.hpp
software/usbflashprog/diag/: diagwindow.cpp  diagwindow.hpp  diagwindow.ui
software/usbflashprog/i18n/: ufprog_en_US.ts  ufprog_es_ES.ts  ufprog_pt_BR.ts
software/usbflashprog/main/: mainwindow.cpp  mainwindow.hpp  mainwindow.ui  qhexeditor.cpp  qhexeditor.hpp
software/usbflashprog/resources/: i18n.qrc  resources.qrc  resources.rc  ufprog.icns
software/usbflashprog/resources/linux/usr/share/applications/: ufprog.desktop
software/usbflashprog/resources/linux/usr/share/pixmaps/: ufprog.xpm
software/usbflashprog/resources/toolicons/: LICENSE  README.md
software/usbflashprog/resources/win/: ufprog.cer  ufprog.pfx
software/usbflashprog/resources/win/ufprog/: ufprog.cat  ufprog.inf
software/usbflashprog/scripts/: build.sh  build_deb.sh  coverage.sh  doxygen.sh  generate_deb.sh  generate_inst.sh  generate_winst.sh  lupdate.sh  test.sh  ufprog.iss  windriver.bat
software/usbflashprog/scripts/deb/ufprog/DEBIAN/: control  postinst  postrm  prerm
software/usbflashprog/scripts/freebsd/ufprog/: +MANIFEST  +POST_DEINSTALL  +POST_INSTALL  +PRE_INSTALL  plist
software/usbflashprog/scripts/linux-resources/usr/share/menu/: ufprog
software/usbflashprog/scripts/rpm/ufprog/SPECS/: ufprog.spec
software/usbflashprog/test/: CMakeLists.txt  main.cpp  main.hpp
software/usbflashprog/test/backend/: chip_test.cpp  chip_test.hpp  opcodes_test.cpp  opcodes_test.hpp  runner_test.cpp  runner_test.hpp
software/usbflashprog/test/emulator/: chip.cpp  chip.hpp  devcmd.hpp  eeprom.cpp  eeprom.hpp  emulator.cpp  emulator.hpp  eprom.cpp  eprom.hpp  flash28f.cpp  flash28f.hpp  sram.cpp  sram.hpp
software/usbflashprog/test/mock/: qserialport.hpp
software/usbflashprog/third/QHexView/: CMakeLists.txt  README.md  qhexview.cpp
software/usbflashprog/third/QHexView/dialogs/: hexfinddialog.cpp
software/usbflashprog/third/QHexView/model/: qhexutils.cpp
software/usbflashprog/third/QHexView/model/buffer/: qdevicebuffer.cpp  qmappedfilebuffer.cpp  qmemorybuffer.cpp
software/usbflashprog/third/libGIS/: CMakeLists.txt  README.md
software/usbflashprog/third/win/: .gitignore  HOWTO-SIGN.md  README.md  sdk_license.txt  wdk_license.txt
software/usbflashprog/ui/: mainwindow.cpp  mainwindow.hpp  mainwindow.ui  qhexeditor.cpp  qhexeditor.hpp  settings.cpp  settings.hpp  settings.ui
(+2992 files in other folders)
